# FC2T_Clicker

./: CMakeLists.txt  README.md  checks.cpp  checks.h  clicker.cpp  clicker.h  dx11.cpp  jitter.cpp  jitter.h  main.cpp  main.h  menu.cpp  menu.h  vulkan.cpp
imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
